# src/routes/auth.route.ts
@@ -5,9 +5,9 @@ import { Routes } from '@interfaces/routes.interface';
 import { AuthMiddleware } from '@middlewares/auth.middleware';
 import { GoogleAuthController } from '@/controllers/googleAuth.controller';
 import
-/* #swagger.tags = ['auth'] */ { ValidationMiddleware } from '@middlewares/validation.middleware';
+/* #swagger.tags = ['Auth'] */ { ValidationMiddleware } from '@middlewares/validation.middleware';
 import { UpdateGoogleUserPhoneDto } from '@/dtos/googleUsers.dto';
-
+https://github.com/Blockchain-Based-EMR-System/Backendhttps://github.com/Blockchain-Based-EMR-System/Backend
 export class AuthRoute implements Routes {
   public path = '/auth';
   public router = Router();
@@ -21,35 +21,35 @@ export class AuthRoute implements Routes {
   private initializeRoutes() {
     this.router.post(
       `/auth/signup`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       ValidationMiddleware(CreateUserDto),
       this.auth.signUp,
     );
 
     this.router.post(
       `/auth/login`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       ValidationMiddleware(LoginUserDto),
       this.auth.logIn,
     );
 
     this.router.post(
       `/auth/logout`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       AuthMiddleware,
       this.auth.logOut,
     );
 
     this.router.post(
       `/auth/refresh`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       AuthMiddleware,
       this.auth.refresh,
     );
 
     this.router.patch(
       `/auth/complete-profile-info`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       ValidationMiddleware(CompleteUserProfileDto),
       AuthMiddleware,
       this.auth.completeProfile,
@@ -57,46 +57,46 @@ export class AuthRoute implements Routes {
 
     this.router.patch(
       `/auth/verify-otp`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       AuthMiddleware,
       this.auth.verifyOTP,
     );
 
     this.router.post(
       `/auth/forget-password`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       this.auth.forgetPassword,
     );
 
     this.router.post(
       `/auth/reset-password`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       ValidationMiddleware(ResetPasswordDto),
       this.auth.resetPassword,
     );
 
     this.router.post(
       `/auth/resend-otp`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       AuthMiddleware,
       this.auth.resendOTP,
     );
 
     this.router.get(
       `/auth/google`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       this.googleAuth.googleOAuth,
     );
 
     this.router.get(
       `/auth/google/callback`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       this.googleAuth.googleOAuthCallback,
     );
 
     this.router.patch(
       `/auth/google/update-phone`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       ValidationMiddleware(UpdateGoogleUserPhoneDto),
       AuthMiddleware,
       this.googleAuth.updatePhoneNumber,
@@ -104,7 +104,7 @@ export class AuthRoute implements Routes {
 
     this.router.get(
       `/auth/google/userData`,
-      /* #swagger.tags = ['auth'] */
+      /* #swagger.tags = ['Auth'] */
       AuthMiddleware,
       this.googleAuth.getGoogleUserData,
     );
